# qt-layout

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: layout.cc  layout.h  layouts.cc  layouts.h  main.cc  settings.cc  settings.h  version.h.in
